# ambrog.io

./: .env  .gitignore  Cargo.toml  Dockerfile  buildme.sh  docker-compose-runlocal.yml  docker-compose.yml  readme.md
.cargo/: config.toml
.git_custom/hooks/: pre-commit  pre-push
.github/workflows/: annoy_when_info_rs_is_touched.yml  check-branch-name-for-pr.yml  check_branch_name_for_pr.yml  check_label_in_master_pr.yml  it_works.yml  tag_release_ship_on_master_pr_merge.yml  tag_ship_release.yml
core/: Cargo.toml
docs/: arch.xml  docker-compose-example.yml
open_meteo/: Cargo.toml
open_meteo/src/: lib.rs
reminders/: Cargo.toml
reminders/src/: bitmap.rs  engine.rs  interface.rs  lib.rs  schedule.rs
reminders/src/memory/: mod.rs  persistent.rs  transient.rs
reminders/src/text/: interpreter.rs  parsing.rs  readme.md
src/: main.rs
users/: Cargo.toml
users/src/: data.rs  lib.rs
