[package]
name = "open_meteo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4" }
chrono-tz = { version = "0.6" }
derive_more = "0.99"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = "1.0"
teloxide = { version = "0.12", features = ["macros"] }
async-trait = "0.1.73"
derive_builder = "0.12.0"