[package]
name = "ambrogio_reminders"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4" }
chrono-tz = { version = "0.9" }
derive_more = "0.99"
serde_json = "1.0"
serde = "1.0"
teloxide = { version = "0.12", features = ["macros"] }
async-trait = "0.1.73"
derive_builder = "0.20.0"
