[package]
name = "ambrogio_reminders"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4" }
chrono-tz = { version = "0.9" }
rand = { version = "0.8.5", features = ["small_rng"]}
serde_json = "1.0"
serde = "1.0"
async-trait = "0.1.73"
tokio = { version =  "1.35.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
